[gd_scene load_steps=9 format=3 uid="uid://8hmxxf5hctq4"]

[ext_resource type="Script" path="res://proc/guards.gd" id="1_vah2w"]
[ext_resource type="PackedScene" uid="uid://du4i0t5r0jr5i" path="res://models/Cop Hover/hover_cop.tscn" id="2_kvctg"]
[ext_resource type="Script" path="res://models/Cop Hover/lights.gd" id="3_2yobh"]
[ext_resource type="AudioStream" uid="uid://dib6ipb88amja" path="res://audio/sfx/police_sirens.wav" id="4_22kll"]
[ext_resource type="PackedScene" uid="uid://l1newnhdvute" path="res://models/props/lamp.tscn" id="6_5xcap"]
[ext_resource type="PackedScene" uid="uid://dqgabcdo64fon" path="res://models/props/arrow.tscn" id="6_p8yyy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_35657"]
size = Vector3(47.7832, 19.1726, 33.2407)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wg653"]
albedo_color = Color(0, 0.517647, 0.788235, 1)
emission_enabled = true
emission = Color(0, 0.65098, 1, 1)
emission_energy_multiplier = 0.35
uv1_scale = Vector3(0.24, 0.24, 0.16)
uv1_offset = Vector3(0.51, -0.04, 0.055)
uv1_triplanar = true

[node name="Guards" type="Node3D"]
script = ExtResource("1_vah2w")

[node name="GuardR" type="CSGPolygon3D" parent="." groups=["guard"]]
use_collision = true
collision_layer = 32817
collision_mask = 49
polygon = PackedVector2Array(0.5, 1, -0.3, 1, -0.5, 0, 0.7, 0)
mode = 2
path_node = NodePath("../../edge_R")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 5.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="GuardF" type="CSGPolygon3D" parent="." groups=["guard"]]
use_collision = true
collision_layer = 32817
collision_mask = 49
polygon = PackedVector2Array(-0.5, 1, 0.3, 1, 0.5, 0, -0.7, 0)
mode = 2
path_node = NodePath("../../edge_F")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 5.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Police" type="Node3D" parent="."]

[node name="blockbench_export" parent="Police" instance=ExtResource("2_kvctg")]
transform = Transform3D(-2.05821, -1.00365e-07, 2.18261, -1.78814e-07, 3, -3.06697e-08, -2.18261, -1.51135e-07, -2.05821, 9.15096, 5.5002, -6.0015)

[node name="blockbench_export2" parent="Police" instance=ExtResource("2_kvctg")]
transform = Transform3D(-2.339, 3.26713e-07, -1.87859, 4.47035e-07, 3, -3.48537e-08, 1.87859, -3.07106e-07, -2.339, -2.48224, 5.16185, -6.0015)
offset = 1.0

[node name="Node3D" type="Node3D" parent="Police"]
transform = Transform3D(0.86982, -0.166336, -0.464483, 0.0292857, 0.9572, -0.287942, 0.492498, 0.236855, 0.837464, 2.67952, 7.03989, -4.72205)
script = ExtResource("3_2yobh")

[node name="Timer" type="Timer" parent="Police/Node3D"]
wait_time = 0.3
autostart = true

[node name="OmniLight3D2" type="OmniLight3D" parent="Police/Node3D"]
transform = Transform3D(1, -4.99189e-07, -1.78814e-07, -1.49012e-08, 1, 2.5332e-07, 2.98023e-08, 2.98023e-08, 1, 3.91801, 0.133713, -1.66107)
light_color = Color(0, 0.15, 1, 1)
light_energy = 4.0
light_volumetric_fog_energy = 16.0
omni_range = 40.0
omni_attenuation = 0.2

[node name="OmniLight3D" type="OmniLight3D" parent="Police/Node3D"]
transform = Transform3D(1, -4.99189e-07, -1.78814e-07, -1.49012e-08, 1, 2.5332e-07, 2.98023e-08, 2.98023e-08, 1, -2.02086, 0.699856, 1.67136)
light_color = Color(1, 0, 0, 1)
light_energy = 5.0
light_volumetric_fog_energy = 16.0
omni_range = 40.0
omni_attenuation = 0.2

[node name="Area3D" type="Area3D" parent="Police"]
transform = Transform3D(0.86982, -0.166336, -0.464483, 0.0292857, 0.9572, -0.287942, 0.492498, 0.236855, 0.837464, 8.17774, 0.239137, 18.497)
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Police/Area3D"]
transform = Transform3D(0.86979, 0.0292852, 0.492498, -0.166338, 0.957201, 0.236855, -0.464486, -0.287942, 0.837463, -17.185, 2.5645, -24.0103)
shape = SubResource("BoxShape3D_35657")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Police"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03691, 3.66387, -3.64076)
stream = ExtResource("4_22kll")
attenuation_model = 2
volume_db = 6.0
unit_size = 75.0
autoplay = true
max_distance = 150.0

[node name="OffRamp" type="CSGBox3D" parent="." groups=["ramp"]]
transform = Transform3D(0.874619, -0.139315, -0.464362, 0, 0.957822, -0.287361, 0.484809, 0.251331, 0.837731, 6.29435, 0.55939, 32.6076)
use_collision = true
collision_layer = 32800
collision_mask = 32
size = Vector3(3.48022, 0.538086, 5.17236)
material = SubResource("StandardMaterial3D_wg653")

[node name="blockbench_export" parent="OffRamp" instance=ExtResource("6_p8yyy")]
transform = Transform3D(-5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, 0, 1.2, 0, 0.269, 1.513)

[node name="blockbench_export2" parent="OffRamp" instance=ExtResource("6_p8yyy")]
transform = Transform3D(-5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, 0, 1.2, -7.81621e-16, 0.269, 0.0560529)

[node name="blockbench_export3" parent="OffRamp" instance=ExtResource("6_p8yyy")]
transform = Transform3D(-5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, 0, 1.2, -2.34486e-15, 0.269, -1.4542)

[node name="LampR" parent="." instance=ExtResource("6_5xcap")]

[node name="LampF" parent="." instance=ExtResource("6_5xcap")]

[connection signal="timeout" from="Police/Node3D/Timer" to="Police/Node3D" method="_on_timer_timeout"]
[connection signal="body_entered" from="Police/Area3D" to="." method="_on_area_3d_body_entered"]
